--- a/package.json
+++ b/package.json
@@ -4,22 +4,24 @@
   "private": true,
   "homepage": "https://leocwlam.github.io",
   "dependencies": {
-    "@material-ui/core": "^4.11.0",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
+    "@material-ui/core": "^4.12.3",
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
-    "bootstrap": "^4.5.2",
-    "gh-pages": "^3.1.0",
-    "node-sass": "^4.14.1",
-    "react": "^16.13.1",
-    "react-bootstrap": "^1.3.0",
-    "react-dom": "^16.13.1",
-    "react-notifications-component": "^2.4.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.2",
+    "bootstrap": "^4.6.1",
+    "gh-pages": "^3.2.3",
+    "jquery": "^1.9.1",
+    "node-sass": "^7.0.1",
+    "react": "^17.0.2",
+    "react-bootstrap": "^1.6.4",
+    "react-dom": "^17.0.2",
+    "react-notifications-component": "^3.1.0",
+    "react-router-dom": "^5.3.0",
+    "react-scripts": "5.0.0",
     "react-scrollspy": "^3.4.3",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.3.3",
+    "web-vitals": "^2.1.2"
   },
   "scripts": {
     "predeploy": "npm run build",
@@ -30,7 +32,10 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
@@ -43,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "popper.js": "^1.16.1-lts"
   }
 }
